--- a/DZ1.ipynb
+++ b/DZ1.ipynb
@@ -19,6 +19,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Сайт Додо Пицца  https://dodopizza.ru/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1. Процент отказов\n",
     "2. Источники трафика\n",
     "3. Глубина просмотра страниц\n",
