--- a/DZ1.ipynb
+++ b/DZ1.ipynb
@@ -42,6 +42,41 @@
    "source": [
     "Задание 2. Сформулируйте 5-10 гипотез для выбранного продукта."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Гипотеза 1. IFBY настроить рассылку с акционным предложением для первого заказа теплым лидам WILL это увеличит количество покупок на 3 % BECAUSE потому что сниженная цена может заинтересовать клиента "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Гипотеза 2. IFBY  сделать скидку на повторный заказ 10%WILL  это увеличит процент повторных  покупок на 5 % BECAUSE  потому что сниженная цена может заинтересовать клиента "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Гипотеза 3.IFBY сделать реферальную скидку \"приведи друга и получи 20% от его заказа на свой счет\"(средства можно использовать только на покупку продукции сайта) WILL  это увеличит вовлеченность клиента, количество новых клиентов и конверсию в покупку BECAUSE  потому что клиент может не только купить, но и  условно заработать"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Гипотеза 4.IFBY сделать скидку на заказ от 4000 руб.  в 30% WILL это увеличит стоимость среднего чека, вовлеченность клиента, оборот компании  BECAUSE потому что желание реализуется желание купить больше за те же деньги"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Гипотеза 5.IFBY на главной странице разместить \"горячее\" акционное предложение WILL  это увеличит количество продаж на 10% BECAUSE потому что снизится процент отказов, клиенты заинтересуются акцией "
+   ]
   }
  ],
  "metadata": {
