--- a/DZ1.ipynb
+++ b/DZ1.ipynb
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Гипотеза 4.IFBY сделать скидку на заказ от 4000 руб.  в 30% WILL это увеличит стоимость среднего чека, вовлеченность клиента, оборот компании  BECAUSE потому что желание реализуется желание купить больше за те же деньги"
+    "Гипотеза 4.IFBY сделать скидку на заказ от 4000 руб.  в 30% WILL это увеличит стоимость среднего чека, вовлеченность клиента, оборот компании  BECAUSE потому что  реализуется желание купить больше за те же деньги"
    ]
   },
   {
